# tox-ini-fmt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini  tox.toml  whitelist.txt
.github/: FUNDING.yaml  FUNDING.yml
.github/workflows/: check.yaml  check.yml  release.yaml  release.yml
src/tox_ini_fmt/: __init__.py  __main__.py  cli.py  formatter.py
src/tox_ini_fmt/formatter/: .test_env.py.swp  __init__.py  requires.py  section_order.py  test_env.py  tox_section.py  util.py
tests/: conftest.py  test_cli.py  test_formatter.py  test_main.py  test_tox_ini_fmt.py  test_upgrade.py
tests/formatter/: test_line_endings.py  test_requires.py  test_section_order.py  test_test_env.py  test_tox_section.py
