[metadata]
name = tox_ini_fmt
description = tox-ini-fmt formats your tox file for you
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/tox-ini-fmt
author = Bernat Gabor
author_email = gaborjbernat@gmail.com
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = tox, formatter
project_urls =
    Source=https://github.com/tox-dev/tox-ini-fmt
    Tracker=https://github.com/tox-dev/tox-ini-fmt/issues

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tox-ini-fmt=tox_ini_fmt.__main__:run

[options.extras_require]
docs =
    Sphinx>=3
test =
    coverage>=5
    coverage_enable_subprocess>=1
    pytest>=4

[options.package_data]
tox_ini_fmt = py.typed

[flake8]
max-line-length = 120
ignore = F401, H301, E203

[coverage:report]
show_missing = True
exclude_lines =
    \#\s*pragma: no cover
    ^\s*raise AssertionError\b
    ^\s*raise NotImplementedError\b
    ^\s*raise$
    ^if __name__ == ['"]__main__['"]:$

[coverage:paths]
source =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src

[coverage:run]
branch = true
parallel = true
dynamic_context = test_function
source =
    ${_COVERAGE_SRC}

[coverage:html]
show_contexts = true
