[metadata]
name = tox_ini_fmt
description = tox-ini-fmt formats your tox file for you
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tox-dev/tox-ini-fmt
author = Bernat Gabor
author_email = gaborjbernat@gmail.com
maintainer = Bernat Gabor
maintainer_email = gaborjbernat@gmail.com
license = MIT
license_file = LICENSE.txt
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities
keywords = tox, formatter
project_urls =
    Source=https://github.com/tox-dev/tox-ini-fmt
    Tracker=https://github.com/tox-dev/tox-ini-fmt/issues

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tox-ini-fmt=tox_ini_fmt.__main__:run

[options.extras_require]
docs =
    Sphinx>=6.1.3
test =
    covdefaults>=2.2.2
    pytest>=7.2.1
    pytest-cov>=4

[options.package_data]
tox_ini_fmt = py.typed

[coverage:run]
plugins = covdefaults
parallel = true

[coverage:paths]
src =
    src
    .tox/*/lib/python*/site-packages
    .tox/pypy*/site-packages
    .tox\*\Lib\site-packages\
    */src
    *\src
other =
    .
    */tox-ini-fmt
    *\tox-ini-fmt

[coverage:report]
fail_under = 100

[coverage:html]
show_contexts = true
skip_covered = false

[coverage:covdefaults]
subtract_omit = */.tox/*
